--- a/button/style.css
+++ b/button/style.css
@@ -1,19 +1,20 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
- body {
-    background: #151519;
+body {
+  background: #151519;
 }
 
 button {
-    background: none;
-    width: 240px;
-    height: 80px;
-    border: 1px solid #338033;
-    font-size: 18px;
-    border-radius: 4px;
-    color: #ccc;
+  background: none;
+  width: 240px;
+  height: 80px;
+  border: 1px solid #338033;
+  font-size: 18px;
+  border-radius: 4px;
+  color: #ccc;
 }
