--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -325,24 +325,28 @@ section img {
     list-style-type: none;
 }
 
-footer {
-    margin: 0;
+.bottem-bar {
     background-color: black;
     color: white;
     width: 100%;
-    padding: 30px;
     box-sizing: border-box;
 }
 
-footer .imagelinks {
+.bottem-bar p {
+    width: 60%;
+}
+
+.bottem-bar .imagelinks {
+    display: inline-block;
     float: right;
 }
-footer img{
+
+.bottem-bar img{
     height: 30px;
     width: 30px;
     border-radius: 100%;
 }
 
-footer a:hover {
+.bottem-bar a:hover {
     opacity: 0.5;
 }
